fixed spacing issue on snapshots and kctable views

--- a/public/less/theme/snap-shots/snap-shot-theme.less
+++ b/public/less/theme/snap-shots/snap-shot-theme.less
@@ -144,6 +144,10 @@
     padding-bottom: 2.857em;
   }
 
+  #kctable {
+    margin-left: 0em;
+  }
+
   .comparison table {
     width: 100%;
     min-width: 15.214em;
